# Justthetip

./: .dockerignore  .docs-keep  .env  .env.compromised  .env.devnet  .env.devnet.backup  .env.example  .env.example.backup  .env.mainnet  .env.mock-test-results.md  .env.mock-test.js  .env.template  .env.testnet  .env.validation-report.md  .eslintrc.cjs  .eslintrc.json  .gitignore  .push_marker  .railwayignore  App.tsx  BOT_247_DEPLOYMENT_GUIDE.md  BOT_INVITE_LINKS.md  BOT_RAILWAY_SETUP.md  CHANGELOG.md  CODEBASE_INDEX.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  CONFIG_TEST_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_PLAN.md  CREATE_PR_INSTRUCTIONS.md  CRYPTO_SUPPORT_GUIDE.md  CryptoTicker.tsx  DEPLOYMENT_ERROR_FIX.md  DEPLOYMENT_FIX_README.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_BACKEND.md  DEVELOPER_GUIDE.md  (+138 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.husky/: commit-msg  pre-commit
.security/: master.key  treasury.json
__tests__/: telegram.test.js
api/: adminRoutes.js  healthRoutes.js  server.js  tipsRoutes.js  walletRoutes.js
certs/: mongodb-cert.pem
chains/: bitcoin.cjs  bitcoin.js  bitcoincash.cjs  bitcoincash.js  dogecoin.js  litecoin.cjs  litecoin.js  litecoinService.js  solana.cjs  solana.js  solanaHelper.cjs  solanaHelper.js  solanaService.js
commands/: airdrop.js  airdropClaim.js  balance.js  burn.js  claim-pending.js  deposit.js  help.js  registerwallet.js  withdraw.js
components/: Buttons.tsx  CryptoTicker.tsx  FeatureCard.tsx  Footer.tsx  HowItWorksCard.tsx  Logo.tsx
contracts/: README.md  example.js  sdk.cjs.backup  sdk.js  sdk.js.backup
contracts/solana-program/: Cargo.toml  README.md
contracts/solana-program/src/: lib.rs
db/: README.md  SCHEMA_DIAGRAM.md  SUPABASE_SETUP.md  database.cjs  database.js  db.js  escrowManager.js  feeAccumulation.js  pregenWalletDb.js  schema.sql  telegramExtensions.js  telegramGroupExtensions.js  validate-database.js  walletManager.js
demos/: demo-simple.js  demo-solana.js
deprecated/: README.md
docs/: AIRDROP_SYSTEM.md  AI_GATEWAY_EXECUTIVE_SUMMARY.md  AI_GATEWAY_IMPLEMENTATION_PRIORITY.md  AI_GATEWAY_INDEX.md  AI_GATEWAY_QUICKSTART.md  AI_GATEWAY_USE_CASES.md  API_LINKING_GUIDE.md  CNAME  CODE_REVIEW_ANALYSIS.md  COMMAND_SIMPLIFICATION_SUMMARY.md  (+56 more)
justthetip-contracts/programs/escrow/: Cargo.toml
justthetip-contracts/programs/justthetip/: Cargo.toml
justthetip-contracts/programs/justthetip/src/: lib.rs  trust_badge.rs
rust-backend/: Cargo.toml  README.md
rust-backend/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  webauthn.rs
(+322 files in other folders)
