[package]
name = "justthetip-passkey-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAuthn authentication
webauthn-rs = "0.5"
webauthn-rs-proto = "0.5"

# Ed25519 cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
signature = "2.2"

# Base58 encoding (for Solana addresses)
bs58 = "0.5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Lazy static initialization
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
